--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,10 +5,12 @@ repos:
     rev: v1.9.3
     hooks:
       - id: seed-isort-config
+        stages: [commit]
   - repo: https://github.com/pre-commit/mirrors-isort
     rev: v4.3.21
     hooks:
       - id: isort
+        stages: [commit]
   - repo: https://github.com/ambv/black
     rev: stable
     hooks:
@@ -18,17 +20,20 @@ repos:
       rev: v2.0.0
       hooks:
         - id: check-json
+          stages: [commit]
         - id: check-added-large-files
+          stages: [commit]
         - id: check-yaml
+          stages: [commit]
         - id: name-tests-test
+          stages: [commit]
         - id: requirements-txt-fixer
+          stages: [commit]
   - repo: local
     hooks:
       - id: tests
         name: run tests
-        entry: pytest -v
+        entry: python -m pytest tests/
         language: system
         types: [python]
         stages: [push]
-
-
