--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,6 +16,7 @@ repos:
     hooks:
       - id: black
         language_version: python3.6
+        stages: [commit]
   -   repo: https://github.com/pre-commit/pre-commit-hooks
       rev: v2.0.0
       hooks:
