--- a/tox.ini
+++ b/tox.ini
@@ -1,18 +1,9 @@
 [tox]
-envlist = py38
-;, py35, py36, py37,
+envlist = py36, py37, py38, black, packaging
 
-;[travis]
-;python =
-;    3.8: py38
-;    3.7: py37
-;    3.6: py36
-;    3.5: py35
+[default]
 
-;[testenv:flake8]
-;basepython = python
-;deps = flake8
-;commands = flake8 template
+basepython = python3.8
 
 [testenv]
 setenv =
@@ -20,5 +11,59 @@ setenv =
 
 commands = py.test {posargs:tests}
 deps =
-    pytest
-    PyQt5
+    -rrequirements.txt
+    -rrequirements_tests.txt
+
+[testenv:black]
+
+description = run Black (linter)
+
+basepython = {[default]basepython}
+
+skip_install = True
+
+deps =
+    -rrequirements_tests.txt
+
+commands =
+    black {env:BLACK_LINT_ARGS:} nodedge
+
+[testenv:flake8]
+
+description = run Flake8 (linter)
+
+basepython = {[default]basepython}
+
+skip_install = True
+
+deps =
+    -rrequirements.txt
+    -rrequirements_tests.txt
+
+commands =
+    flake8 {posargs:nodedge/{env:PY_MODULE}}
+
+
+[flake8]
+ignore = E203, E266, E501, W503, F403, F401, F405, E231
+max-line-length = 89
+max-complexity = 18
+select = B,C,E,F,W,T4,B9
+
+[testenv:packaging]
+
+description = check for potential packaging problems
+
+basepython = {[default]basepython}
+
+skip_install = True
+
+deps =
+   check-manifest==0.40
+   readme_renderer==24.0
+   twine==3.1.1
+
+commands =
+   check-manifest
+   pip wheel --wheel-dir "{envtmpdir}/dist" --no-deps {toxinidir}
+   twine check "{envtmpdir}/dist/"*
