--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -34,7 +34,7 @@ repos:
     hooks:
       - id: tests
         name: run tests
-        entry: pytest tests/
+        entry: python -m pytest ./tests/
         language: system
         types: [python]
         stages: [push]
