--- a/.travis.yml
+++ b/.travis.yml
@@ -12,19 +12,16 @@ matrix:
       env: TOXENV=black
     - python: 3.8
       env: TOXENV=mypy
-
     - python: 3.6
       env: TOXENV=py36
-
     - python: 3.7
       env: TOXENV=py37
-    - python: 3.7
-
     - python: 3.8
       env: TOXENV=py38
 
 install:
-  - pip install tox pytest
+  - pip install -r requirements.txt
+  - pip install -r tests/requirements.txt
 
 script:
   - tox
