--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py36, py37, py38, black, packaging
+envlist = py36, py37, py38, black, packaging, codecov
 
 [default]
 
@@ -9,7 +9,7 @@ basepython = python3.8
 setenv =
     PYTHONPATH = {toxinidir}
 
-commands = py.test {posargs:tests}
+commands = pytest --cov-append --cov=nodedge tests/
 deps =
     -rrequirements.txt
     -rrequirements_tests.txt
@@ -17,13 +17,8 @@ deps =
 [testenv:black]
 
 description = run Black (linter)
-
 basepython = {[default]basepython}
-
 skip_install = True
-
-deps =
-    -rrequirements_tests.txt
 
 commands =
     black {env:BLACK_LINT_ARGS:} nodedge
@@ -31,18 +26,11 @@ commands =
 [testenv:flake8]
 
 description = run Flake8 (linter)
-
 basepython = {[default]basepython}
-
 skip_install = True
 
-deps =
-    -rrequirements.txt
-    -rrequirements_tests.txt
-
 commands =
-    flake8 {posargs:nodedge/{env:PY_MODULE}}
-
+    flake8 {posargs:nodedge}
 
 [flake8]
 ignore = E203, E266, E501, W503, F403, F401, F405, E231
@@ -67,3 +55,15 @@ commands =
    check-manifest
    pip wheel --wheel-dir "{envtmpdir}/dist" --no-deps {toxinidir}
    twine check "{envtmpdir}/dist/"*
+
+[testenv:codecov]
+deps =
+    codecov
+skip_install = true
+usedevelop = false
+setenv =
+  COVERAGE_FILE=.coverage
+commands =
+    coverage report
+    coverage xml --ignore-errors
+    codecov []
