--- a/tox.ini
+++ b/tox.ini
@@ -2,29 +2,25 @@
 envlist = py36, py37, py38, black, packaging, codecov
 
 [default]
-
 basepython = python3.8
 
 [testenv]
+passenv = DISPLAY XAUTHORITY
 setenv =
     PYTHONPATH = {toxinidir}
-
-commands = pytest --cov-append --cov=nodedge tests/
+commands = pytest -s -vv --cov-append --cov=nodedge
 deps =
     -rrequirements.txt
     -rrequirements_tests.txt
 
 [testenv:black]
-
 description = run Black (linter)
 basepython = {[default]basepython}
 skip_install = True
-
 commands =
     black {env:BLACK_LINT_ARGS:} nodedge
 
 [testenv:flake8]
-
 description = run Flake8 (linter)
 basepython = {[default]basepython}
 skip_install = True
@@ -38,14 +34,11 @@ max-line-length = 89
 max-complexity = 18
 select = B,C,E,F,W,T4,B9
 
-[testenv:packaging]
+[testenv:check_packaging]
 
 description = check for potential packaging problems
-
 basepython = {[default]basepython}
-
 skip_install = True
-
 deps =
    check-manifest==0.40
    readme_renderer==24.0
