--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,18 @@
 [tox]
-envlist = py36, py37, py38, black, packaging, codecov
+envlist = erase_coverage, py36, py37, py38, black, packaging, coverage
 
 [default]
 basepython = python3.8
+
+[testenv:begin]
+commands = coverage erase
 
 [testenv]
 passenv = DISPLAY XAUTHORITY
 setenv =
     PYTHONPATH = {toxinidir}
-commands = pytest -s -vv --cov-append --cov=nodedge
+commands =
+    pytest -s -vv
 deps =
     -rrequirements.txt
     -rrequirements_tests.txt
@@ -37,7 +41,7 @@ select = B,C,E,F,W,T4,B9
 [testenv:check_packaging]
 
 description = check for potential packaging problems
-basepython = {[default]basepython}
+basepython = python3.6
 skip_install = True
 deps =
    check-manifest==0.40
@@ -49,14 +53,14 @@ commands =
    pip wheel --wheel-dir "{envtmpdir}/dist" --no-deps {toxinidir}
    twine check "{envtmpdir}/dist/"*
 
-[testenv:codecov]
-deps =
-    codecov
+[testenv:coverage]
+passenv = TOXENV CI TRAVIS TRAVIS_* CODECOV_*
 skip_install = true
 usedevelop = false
 setenv =
   COVERAGE_FILE=.coverage
 commands =
+    coverage run --append setup.py test
     coverage report
-    coverage xml --ignore-errors
+    coverage html
     codecov []
