--- a/.isort.cfg
+++ b/.isort.cfg
@@ -3,3 +3,5 @@ line_length = 88
 multi_line_output = 3
 include_trailing_comma = True
 known_third_party = PyQt5,pytest,setuptools
+force_grid_wrap=0
+use_parentheses=True
