Add scene and socket tests

--- a/tox.ini
+++ b/tox.ini
@@ -2,9 +2,10 @@
 envlist = erase_coverage, py36, py37, py38, black, packaging, coverage
 
 [default]
-basepython = python3.8
+basepython = python3.6
 
 [testenv:begin]
+description = Erase previous coverage
 commands = coverage erase
 
 [testenv]
@@ -18,30 +19,23 @@ deps =
     -rrequirements_tests.txt
 
 [testenv:black]
-description = run Black (linter)
+description = Check that format follows Black recommendations
 basepython = {[default]basepython}
 skip_install = True
 commands =
     black {env:BLACK_LINT_ARGS:} nodedge
 
 [testenv:flake8]
-description = run Flake8 (linter)
+description = Check that code follows pep8 recommendations
 basepython = {[default]basepython}
 skip_install = True
 
 commands =
     flake8 {posargs:nodedge}
 
-[flake8]
-ignore = E203, E266, E501, W503, F403, F401, F405, E231
-max-line-length = 89
-max-complexity = 18
-select = B,C,E,F,W,T4,B9
-
 [testenv:check_packaging]
-
-description = check for potential packaging problems
-basepython = python3.6
+description = Check for potential packaging problems,
+basepython = {[default]basepython}
 skip_install = True
 deps =
    check-manifest==0.40
@@ -54,6 +48,8 @@ commands =
    twine check "{envtmpdir}/dist/"*
 
 [testenv:coverage]
+description = Compute coverage from tests run by setup and send it to codecov.
+basepython = {[default]basepython}
 passenv = TOXENV CI TRAVIS TRAVIS_* CODECOV_*
 skip_install = true
 usedevelop = false
