Add unit tests on MdiWindow

--- a/.isort.cfg
+++ b/.isort.cfg
@@ -2,6 +2,6 @@
 line_length = 88
 multi_line_output = 3
 include_trailing_comma = True
-known_third_party = PyQt5,pytest,setuptools
+known_third_party = PyQt5,pytest,pytestqt,setuptools
 force_grid_wrap=0
 use_parentheses=True
