--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,8 @@ jobs:
     - python: 3.6
       env: TOXENV=black
     - python: 3.6
+      env: TOXENV=type
+    - python: 3.6
       env: TOXENV=py36
     - python: 3.7
       env: TOXENV=py37
