--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = erase_coverage, py36, py37, py38, black, packaging, coverage
+envlist = erase_coverage, py36, py37, py38, black, packaging, coverage, type
 
 [default]
 basepython = python3.6
@@ -17,6 +17,12 @@ commands =
 deps =
     -rrequirements.txt
     -rrequirements_tests.txt
+
+[testenv:type]
+description = type check ourselves
+basepython = {[default]basepython}
+commands =
+    mypy -v -p nodedge -p tests
 
 [testenv:black]
 description = Check that format follows Black recommendations
