Fix manifest and add a pre-push hook to check packaging

--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,7 +1,10 @@
 [settings]
+; Black compatibility
 line_length = 88
 multi_line_output = 3
 include_trailing_comma = True
-known_third_party = PyQt5,pytest,pytestqt,setuptools
 force_grid_wrap=0
 use_parentheses=True
+
+known_third_party = PyQt5,pytest,pytestqt,setuptools
+
