--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -28,7 +28,8 @@ recursive-include examples *
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
 
-recursive-include docs *.rst conf.py Makefile make.bat *.jpg *.png *.gif
+recursive-include doc *.rst conf.py Makefile make.bat *.jpg *.png *.gif
+recursive-exclude doc/build *
 
 include *.txt
 recursive-include nodedge *.cfg
