--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ envlist = erase_coverage, py36, py37, py38, black, packaging, coverage, type
 basepython = python3.6
 
 [testenv:begin]
-description = Erase previous coverage
+description = Erase previous coverage.
 commands = coverage erase
 
 [testenv]
@@ -19,28 +19,28 @@ deps =
     -rrequirements_tests.txt
 
 [testenv:type]
-description = type check ourselves
+description = Check typing with mypy.
 basepython = {[default]basepython}
 commands =
     mypy -v -p nodedge -p tests
 
 [testenv:black]
-description = Check that format follows Black recommendations
+description = Check that format follows Black recommendations.
 basepython = {[default]basepython}
 skip_install = True
 commands =
     black {env:BLACK_LINT_ARGS:} nodedge
 
 [testenv:flake8]
-description = Check that code follows pep8 recommendations
+description = Check that code follows pep8 recommendations.
 basepython = {[default]basepython}
 skip_install = True
 
 commands =
     flake8 {posargs:nodedge}
 
-[testenv:check_packaging]
-description = Check for potential packaging problems,
+[testenv:packaging]
+description = Check for potential packaging problems.
 basepython = {[default]basepython}
 skip_install = True
 deps =
