--- a/.gitignore
+++ b/.gitignore
@@ -6,24 +6,19 @@
 *.pkl
 *.python-version
 *.tar*
+
 .coverage
 coverage.xml
+
 htmlcov/
 .eggs/
 .mypy_cache
-
 venv/
 venv36/
 .idea/
-docs/build/
-docs/source/_build
+doc/build/
 dist/
 build/
 _template/
 *.egg-info/
 .tox/
-mdi/
-demo_pyqtdeploy/
-test_fbs/
-src
-target
