--- a/.isort.cfg
+++ b/.isort.cfg
@@ -6,5 +6,5 @@ include_trailing_comma = True
 force_grid_wrap=0
 use_parentheses=True
 
-known_third_party = PyQt5,pytest,pytestqt,recommonmark,setuptools
+known_third_party = PyQt5,pytest,pytestqt,setuptools
 
