--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = erase_coverage, py36, py37, py38, black, packaging, coverage, type
+envlist = erase_coverage, py36, py37, py38, black, packaging, coverage, type, docs
 
 [default]
 basepython = python3.6
@@ -66,3 +66,8 @@ commands =
     coverage report
     coverage html
     codecov []
+
+[testenv:docs]
+changedir = docs
+deps = -rrequirements_docs.txt
+commands = sphinx-build -W -b html -d {envtmpdir}/doctrees ./source {envtmpdir}/html
