--- a/.travis.yml
+++ b/.travis.yml
@@ -44,6 +44,8 @@ jobs:
       env: TOXENV=coverage
     - python: 3.6
       env: TOXENV=packaging
+    - python: 3.6
+      env: TOXENV=docs
 
 before_script:
   - "herbstluftwm &"
