Update manifest after adding few md files

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -11,6 +11,7 @@ include Pipfile.lock
 include readthedocs.yml
 include mypy.ini
 include .bumpversion.cfg
+include CODE_OF_CONDUCT.md
 
 include .flake8
 include .isort.cfg
