Add scene items dock and history dock, and test scene history

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -41,7 +41,7 @@ repos:
         pass_filenames: false
       - id: typing
         name: run typing checks
-        entry: tox -e type
+        entry: tox -e mypy
         language: system
         types: [python]
         stages: [commit]
