--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = erase_coverage, py36, py37, py38, black, packaging, coverage, type, docs
+envlist = erase_coverage, py36, py37, py38, black, packaging, coverage, mypy, docs
 
 [default]
 basepython = python3.6
@@ -18,7 +18,7 @@ deps =
     -rrequirements.txt
     -rrequirements_tests.txt
 
-[testenv:type]
+[testenv:mypy]
 description = Check typing with mypy.
 basepython = {[default]basepython}
 commands =
