--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ jobs:
     - python: 3.6
       env: TOXENV=black
     - python: 3.6
-      env: TOXENV=type
+      env: TOXENV=mypy
     - python: 3.6
       env: TOXENV=py36
     - python: 3.7
