Link scene items list to scene

--- a/tox.ini
+++ b/tox.ini
@@ -22,7 +22,7 @@ deps =
 description = Check typing with mypy.
 basepython = {[default]basepython}
 commands =
-    mypy -v -p nodedge -p tests
+    mypy -p nodedge -p tests
 
 [testenv:black]
 description = Check that format follows Black recommendations.
