--- a/mypy.ini
+++ b/mypy.ini
@@ -16,6 +16,10 @@ ignore_missing_imports = True
 [mypy-pytestqt.*]
 ignore_missing_imports = True
 ;
+;[mypy-PySide2.*]
+;ignore_missing_imports = True
+
+;
 ;disallow_untyped_calls = True
 ;disallow_untyped_defs = True
 ;check_untyped_defs = True
