--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = erase_coverage, py36, py37, py38, black, packaging, coverage, mypy, docs
+envlist = begin, py36, py37, py38, black, packaging, coverage, mypy, docs
 
 [default]
 basepython = python3.6
