--- a/mypy.ini
+++ b/mypy.ini
@@ -15,6 +15,9 @@ ignore_missing_imports = True
 
 [mypy-pytestqt.*]
 ignore_missing_imports = True
+
+[mypy-pyqtconsole.*]
+ignore_missing_imports = True
 ;
 ;[mypy-PySide2.*]
 ;ignore_missing_imports = True
