Ignore qt warning message about xcb connection

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,3 +3,4 @@ qt_log_level_fail = DEBUG
 qt_api=pyside2
 filterwarnings =
     ignore:.*QFontMetrics.width.* is deprecated:DeprecationWarning:pyqtconsole
+    ignore:.*QXcbConnection.*
