--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
-qt_log_level_fail = DEBUG
+qt_log_format = {rec.when} {rec.type_name}: {rec.message}
+qt_log_level_fail = CRITICAL
 qt_api=pyside2
 filterwarnings =
     ignore:.*QFontMetrics.width.* is deprecated:DeprecationWarning:pyqtconsole
-    ignore:.*QXcbConnection.*
