Fix wrong coverage

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-qt_log_format = {rec.when} {rec.type_name}: {rec.message}
+;qt_log_format = {rec.when} {rec.type_name}: {rec.message}
 qt_log_level_fail = CRITICAL
 qt_api=pyside2
 filterwarnings =
