--- a/mypy.ini
+++ b/mypy.ini
@@ -18,6 +18,9 @@ ignore_missing_imports = True
 
 [mypy-pyqtconsole.*]
 ignore_missing_imports = True
+
+[mypy-coloredlogs.*]
+ignore_missing_imports = True
 ;
 ;[mypy-PySide2.*]
 ;ignore_missing_imports = True
