Add mainwindow template

--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,13 @@ passenv = DISPLAY XAUTHORITY
 setenv =
     PYTHONPATH = {toxinidir}
 commands =
-    pytest -s -vv
+;nf: new file first
+;s: show capture
+;vv: very verbose
+;ff: first failed
+;n: parallel testing
+;x: stop on first failure
+    pytest -s -vv --ff -x -n auto
 deps =
     -rrequirements.txt
     -rrequirements_tests.txt
