Add first log analyzer

--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,7 @@ deps =
 description = Check typing with mypy.
 basepython = {[default]basepython}
 commands =
-    mypy -p nodedge -p tests
+    mypy -p nodedge -p tests -p tools
 
 [testenv:black]
 description = Check that format follows Black recommendations.
@@ -45,6 +45,9 @@ skip_install = True
 commands =
     flake8 {posargs:nodedge}
 
+[check-manifest]
+ignore = demos
+
 [testenv:packaging]
 description = Check for potential packaging problems.
 basepython = {[default]basepython}
@@ -55,7 +58,7 @@ deps =
    twine==3.1.1
 
 commands =
-   check-manifest
+   check-manifest -v
    pip wheel --wheel-dir "{envtmpdir}/dist" --no-deps {toxinidir}
    twine check "{envtmpdir}/dist/"*
 
