Code generation: Fix apidoc.

--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ commands =
 ;ff: first failed
 ;n: parallel testing
 ;x: stop on first failure
-    pytest -s -vv --ff -x -n auto
+    pytest -s -vv --ff -x
 deps =
     -rrequirements.txt
     -rrequirements_tests.txt
@@ -79,4 +79,5 @@ commands =
 [testenv:docs]
 changedir = docs
 deps = -rrequirements_docs.txt
-commands = sphinx-build -W -b html -d {envtmpdir}/doctrees ./source {envtmpdir}/html
+commands =
+    sphinx-build -W -b html -d {envtmpdir}/doctrees ./source {envtmpdir}/html
