--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ commands =
 ;ff: first failed
 ;n: parallel testing
 ;x: stop on first failure
-    pytest -s -vv --ff -x
+    pytest -s -vv --ff
 deps =
     -rrequirements.txt
     -rrequirements_tests.txt
