Start implementing integral node

--- a/.isort.cfg
+++ b/.isort.cfg
@@ -6,5 +6,5 @@ include_trailing_comma = True
 force_grid_wrap=0
 use_parentheses=True
 
-known_third_party = PIL,PyQt5,PySide2,coloredlogs,numpy,pandas,pyqtconsole,pyqtgraph,pytest,pytestqt,recommonmark,setuptools,yaml
+known_third_party = PIL,PyQt5,PySide2,black,coloredlogs,graphene,numpy,pandas,pylab,pyqtconsole,pyqtgraph,pytest,pytestqt,recommonmark,scipy,setuptools,yaml
 
