Do not consider sphinx warnings as errors anymore.

--- a/tox.ini
+++ b/tox.ini
@@ -80,4 +80,4 @@ commands =
 changedir = docs
 deps = -rrequirements_docs.txt
 commands =
-    sphinx-build -W -b html -d {envtmpdir}/doctrees ./source {envtmpdir}/html
+    sphinx-build -b html -d {envtmpdir}/doctrees ./source {envtmpdir}/html
