Add first implementation of hdf5 curve plotter.

--- a/mypy.ini
+++ b/mypy.ini
@@ -21,10 +21,19 @@ ignore_missing_imports = True
 
 [mypy-coloredlogs.*]
 ignore_missing_imports = True
+
+[mypy-pyqtgraph.*]
+ignore_missing_imports = True
+
+[mypy-h5py.*]
+ignore_missing_imports = True
+
+[mypy-numpy.*]
+ignore_missing_imports = True
+
 ;
 ;[mypy-PySide2.*]
 ;ignore_missing_imports = True
-
 ;
 ;disallow_untyped_calls = True
 ;disallow_untyped_defs = True
