--- a/mypy.ini
+++ b/mypy.ini
@@ -9,6 +9,7 @@ show_error_context = True
 show_column_numbers = True
 show_error_codes = True
 pretty = True
+disable_error_code = attr-defined
 
 [mypy-pytest.*]
 ignore_missing_imports = True
@@ -30,5 +31,6 @@ ignore_missing_imports = True
 ;disallow_untyped_defs = True
 ;check_untyped_defs = True
 
-
+;[mypy-PySide6.*]
+;ignore_missing_attribute = True
 
