--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,8 @@
 [tox]
-envlist = begin, py36, py37, py38, black, packaging, coverage, mypy, docs
+envlist = begin, py310, py37, py38, black, packaging, coverage, mypy, docs
 
 [default]
-basepython = python3.6
+basepython = python3.10
 
 [testenv:begin]
 description = Erase previous coverage.
@@ -12,6 +12,8 @@ commands = coverage erase
 passenv = DISPLAY XAUTHORITY
 setenv =
     PYTHONPATH = {toxinidir}
+    QT_API = pyside6
+    PYTEST_QT_API = pyside6
 commands =
 ;nf: new file first
 ;s: show capture
@@ -28,7 +30,7 @@ deps =
 description = Check typing with mypy.
 basepython = {[default]basepython}
 commands =
-    mypy -p nodedge -p tests -p tools
+    mypy -p nodedge -p tools
 
 [testenv:black]
 description = Check that format follows Black recommendations.
