--- a/mypy.ini
+++ b/mypy.ini
@@ -26,6 +26,9 @@ ignore_missing_imports = True
 ;[mypy-PySide2.*]
 ;ignore_missing_imports = True
 
+[mypy-numpy.*]
+ignore_missing_imports = True
+
 ;
 ;disallow_untyped_calls = True
 ;disallow_untyped_defs = True
