--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ branches:
 
 before_install:
   - sudo apt-get update
-  - sudo apt-get install -y xvfb herbstluftwm
+  - sudo apt-get install -y xvfb herbstluftwm libxcb-xinerama0
   - python -m pip install -U pip
 
 install:
