--- a/tox.ini
+++ b/tox.ini
@@ -72,6 +72,9 @@ skip_install = true
 usedevelop = false
 setenv =
   COVERAGE_FILE=.coverage
+  QT_API = pyside6
+  PYTEST_QT_API = pyside6
+  PYTHONPATH = {toxinidir}
 commands =
     coverage run --append setup.py test
     coverage report
