Add github actions

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,9 @@ services: xvfb
 language: python
 branches:
   only:
-    - master
-    - /^v.*$/
+    - no-branch
+#    - master
+#    - /^v.*$/
 
 
 before_install:
