--- a/tox.ini
+++ b/tox.ini
@@ -14,6 +14,7 @@ setenv =
     PYTHONPATH = {toxinidir}
     QT_API = pyside6
     PYTEST_QT_API = pyside6
+    QT_DEBUG_PLUGINS=1
 commands =
 ;nf: new file first
 ;s: show capture
@@ -86,3 +87,10 @@ changedir = docs
 deps = -rrequirements_docs.txt
 commands =
     sphinx-build -b html -d {envtmpdir}/doctrees ./source {envtmpdir}/html
+
+[gh-actions]
+python =
+    3.7: py37
+    3.8: py38
+    3.9: py39
+    3.10: py310, mypy, flake8, black, coverage, packaging, docs
