--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -20,14 +20,19 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install linux dependencies
       run: |
-        sudo apt-get install -y libxml2-utils x11-utils libxkbcommon-x11-0 libxcb-icccm4
-        sudo apt-get install -y libxcb-image0 libxcb-keysyms1 libxcb-randr0 x11-utils
-        sudo apt-get install -y libxcb-render-util0 libxcb-xinerama0 libxcb-xfixes0
+        if [ "${{ matrix.os }}" == "ubuntu-20.04" ]; then
+          sudo apt-get install -y libxml2-utils x11-utils libxkbcommon-x11-0 libxcb-icccm4
+          sudo apt-get install -y libxcb-image0 libxcb-keysyms1 libxcb-randr0 x11-utils
+          sudo apt-get install -y libxcb-render-util0 libxcb-xinerama0 libxcb-xfixes0
+        fi
+      shell: bash
     - name: Install python dependencies
+      run: |
         python -m pip install --upgrade pip
         python -m pip install tox tox-gh-actions
     - name: Test with tox
       uses: GabrielBB/xvfb-action@v1
-      run: tox
-      env:
-        PLATFORM: ${{ matrix.platform }}
+      with:
+        run: tox
+        env:
+          PLATFORM: ${{ matrix.platform }}
