Add github actions

--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -1,10 +1,11 @@
 name: Python test
 
+
 on:
   push:
     branches:
       - main
-  pull_request
+  - pull_request
 
 jobs:
   build:
@@ -23,7 +24,8 @@ jobs:
     - name: Install linux dependencies
       run: |
         if [ "${{ matrix.os }}" == "ubuntu-20.04" ]; then
-          sudo apt-get install -y libxml2-utils x11-utils libxkbcommon-x11-0 libxcb-icccm4
+          sudo apt-get install -y libxml2-utils x11-utils
+          sudo apt-get install -y libxkbcommon-x11-0 libxcb-icccm4
           sudo apt-get install -y libxcb-image0 libxcb-keysyms1 libxcb-randr0 x11-utils
           sudo apt-get install -y libxcb-render-util0 libxcb-xinerama0 libxcb-xfixes0
         fi
@@ -36,5 +38,4 @@ jobs:
       uses: GabrielBB/xvfb-action@v1
       with:
         run: tox
-        env:
-          PLATFORM: ${{ matrix.platform }}
+
