Add github actions

--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -26,7 +26,8 @@ jobs:
     - name: Install linux dependencies
       run: |
         if [ "${{ matrix.os }}" == "ubuntu-20.04" ]; then
-          sudo apt-get install -y libxml2-utils x11-utils libgl1-mesa-dev
+          sudo apt-get update
+          sudo apt-get install -y libxml2-utils x11-utils xvfb herbstluftwm
           sudo apt-get install -y libxkbcommon-x11-0 libxcb-icccm4
           sudo apt-get install -y libxcb-image0 libxcb-keysyms1 libxcb-randr0 x11-utils
           sudo apt-get install -y libxcb-render-util0 libxcb-xinerama0 libxcb-xfixes0
@@ -35,10 +36,14 @@ jobs:
     - name: Install python dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install tox tox-gh-actions
+        python -m pip install setuptools_rust tox tox-gh-actions
     - name: Test with tox
       uses: GabrielBB/xvfb-action@v1
+      env:
+        PLATFORM: ${{ matrix.platform }}
+        QT_API: pyside6
+        PYTEST_QT_API: pyside6
+        QT_DEBUG_PLUGINS: 1
       with:
         run: tox
-        PLATFORM: ${{ matrix.platform }}
 
