--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ${{ matrix.platform }}
     strategy:
       matrix:
-        platform: [ubuntu-20.04, macos-latest, windows-latest]
+        platform: [ubuntu-latest, macos-latest, windows-latest]
         python-version: [3.8, 3.9, '3.10']
 
     steps:
@@ -25,7 +25,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install linux dependencies
       run: |
-        if [ "${{ matrix.os }}" == "ubuntu-20.04" ]; then
+        if [ "${{ matrix.os }}" == "ubuntu-latest" ]; then
           sudo apt-get update
           sudo apt-get install -y libxml2-utils x11-utils xvfb herbstluftwm
           sudo apt-get install -y libxkbcommon-x11-0 libxcb-icccm4
