Add github actions

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = begin, {py310, py39, py38, black, packaging, coverage, mypy, docs}-{linux,macos,windows}
+envlist = begin, py310, py39, py38, black, packaging, coverage, mypy, docs
 
 [default]
 basepython = python3.10
@@ -94,9 +94,3 @@ python =
     3.8: py38
     3.9: py39
     3.10: py310, mypy, flake8, black, coverage, packaging, docs
-
-[gh-actions:env]
-PLATFORM =
-    ubuntu-20.04: linux
-    macos-latest: macos
-    windows-latest: windows
