Add github actions

--- a/tox.ini
+++ b/tox.ini
@@ -68,7 +68,7 @@ commands =
 [testenv:coverage]
 description = Compute coverage from tests run by setup and send it to codecov.
 basepython = {[default]basepython}
-passenv = TOXENV CI TRAVIS TRAVIS_* CODECOV_*
+passenv = TOXENV CI CODECOV_*
 skip_install = true
 usedevelop = false
 setenv =
@@ -77,10 +77,7 @@ setenv =
   PYTEST_QT_API = pyside6
   PYTHONPATH = {toxinidir}
 commands =
-    coverage run --append setup.py test
-    coverage report
-    coverage html
-    codecov []
+    codecov -e TOXENV
 
 [testenv:docs]
 changedir = docs
