Add github actions

--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -2,12 +2,13 @@ name: Python test
 
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - '**'
+  - push
+#  :
+#    branches:
+#      - main
+#  pull_request:
+#    branches:
+#      - '**'
 
 jobs:
   build:
