Add github actions

--- a/tox.ini
+++ b/tox.ini
@@ -77,6 +77,9 @@ setenv =
   PYTEST_QT_API = pyside6
   PYTHONPATH = {toxinidir}
 commands =
+    coverage run --append setup.py test
+    coverage report
+    coverage html
     codecov -e TOXENV
 
 [testenv:docs]
