--- a/tox.ini
+++ b/tox.ini
@@ -80,7 +80,7 @@ commands =
     coverage run --append setup.py test
     coverage report
     coverage html
-    codecov -e TOXENV
+    codecov -e CODECOV_TOKEN
 
 [testenv:docs]
 changedir = docs
