Add github actions

--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -15,7 +15,8 @@ jobs:
     runs-on: ${{ matrix.platform }}
     strategy:
       matrix:
-        platform: [ubuntu-latest, macos-latest, windows-latest]
+#        platform: [ubuntu-latest, macos-latest, windows-latest]
+        platform: [ubuntu-latest]
         python-version: [3.8, 3.9, '3.10']
 
     steps:
@@ -40,10 +41,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install setuptools_rust tox tox-gh-actions
-    - name: Test with tox
+    - name: Tests with tox
       uses: GabrielBB/xvfb-action@v1
       with:
         run: tox
       env:
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-        PLATFORM: ${{ matrix.platform }}
+#        PLATFORM: ${{ matrix.platform }}
