--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,6 @@
 [tox]
-envlist = {py38,py39,py310}-{linux,macos,windows}, {begin,black, packaging,coverage,mypy,docs}-{linux}
+envlist = begin,py38,py39,py310,black, packaging,coverage,mypy,docs
+;envlist = {py38,py39,py310}-{linux,macos,windows}, {begin,black, packaging,coverage,mypy,docs}-{windows}
 
 [default]
 basepython = python3.10
@@ -95,8 +96,8 @@ python =
     3.9: py39
     3.10: py310, mypy, flake8, black, coverage, packaging, docs
 
-[gh-actions:env]
-PLATFORM =
-    ubuntu-latest: linux
-    macos-latest: macos
-    windows-latest: windows
+;[gh-actions:env]
+;PLATFORM =
+;    ubuntu-latest: linux
+;    macos-latest: macos
+;    windows-latest: windows
