Move docs to docs_sphinx

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -53,9 +53,9 @@ repos:
         types: [python]
         stages: [push]
         pass_filenames: false
-      - id: docs
-        name: run checks on docs building
-        entry: tox -e docs
+      - id: docs_sphinx
+        name: run checks on docs_sphinx building
+        entry: tox -e docs_sphinx
         language: system
         types: [python]
         stages: [push]
