--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
-envlist = begin,py38,py39,py310,black, packaging,coverage,mypy,docs
-;envlist = {py38,py39,py310}-{linux,macos,windows}, {begin,black, packaging,coverage,mypy,docs}-{windows}
+envlist = begin,py38,py39,py310,black, packaging,coverage,mypy,docs_sphinx
+;envlist = {py38,py39,py310}-{linux,macos,windows}, {begin,black, packaging,coverage,mypy,docs_sphinx}-{windows}
 
 [default]
 basepython = python3.10
@@ -83,8 +83,8 @@ commands =
     coverage html
     codecov -e CODECOV_TOKEN
 
-[testenv:docs]
-changedir = docs
+[testenv:docs_sphinx]
+changedir = docs_sphinx
 deps = -rrequirements_docs.txt
 commands =
     sphinx-build -b html -d {envtmpdir}/doctrees ./source {envtmpdir}/html
@@ -94,7 +94,7 @@ python =
     3.7: py37
     3.8: py38
     3.9: py39
-    3.10: py310, mypy, flake8, black, coverage, packaging, docs
+    3.10: py310, mypy, flake8, black, coverage, packaging, docs_sphinx
 
 ;[gh-actions:env]
 ;PLATFORM =
