--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -5,18 +5,18 @@
 # Required
 version: 2
 
-# Build documentation in the docs/ directory with Sphinx
+# Build documentation in the docs_sphinx/ directory with Sphinx
 sphinx:
-  configuration: docs/source/conf.py
+  configuration: docs_sphinx/source/conf.py
 
 # Build documentation with MkDocs
 #mkdocs:
 #  configuration: mkdocs.yml
 
-# Optionally build your docs in additional formats such as PDF and ePub
+# Optionally build your docs_sphinx in additional formats such as PDF and ePub
 formats: all
 
-# Optionally set the version of Python and requirements required to build your docs
+# Optionally set the version of Python and requirements required to build your docs_sphinx
 python:
   version: 3.6
   install:
